# QRcode_Generate_Recongnition

./: .gitignore  CMakeLists.txt  README.md
3rd/zxing/wrappers/dotnet/: dotnet.sln
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  DEVELOPMENT.md  INSTALLATION.md  PROJECT_DEVELOPMENT_SUMMARY.md  README.md  USER_MANUAL.md
forms/: qrc.qrc
include/: mainwindow.h
include/core/: QRCodeGenerator.h  QRCodeRecognizer.h
include/gui/: BaseWidget.h  CameraWidget.h  GeneratorWidget.h  MainWindow.h  RecognizerWidget.h  SettingsDialog.h
include/utils/: AppSettings.h  AppUtils.h  ThemeManager.h
src/: main.cpp  mainwindow.cpp
src/core/: QRCodeGenerator.cpp  QRCodeRecognizer.cpp
src/gui/: BaseWidget.cpp  CameraWidget.cpp  GeneratorWidget.cpp  MainWindow.cpp  RecognizerWidget.cpp  SettingsDialog.cpp
src/utils/: AppSettings.cpp  AppUtils.cpp  ThemeManager.cpp
